# resources/js/api/models/index.ts
@@ -35,10 +35,16 @@ export * from "./paginationLinks";
 export * from "./paginationMeta";
 export * from "./point";
 export * from "./route";
+export * from "./routeBasePrice";
 export * from "./routeBounds";
 export * from "./routeCompany";
 export * from "./routeContact";
 export * from "./routeDriver";
+export * from "./routePrice";
+export * from "./routePriceBegPoint";
+export * from "./routePriceEndPoint";
+export * from "./routePriceRoute";
+export * from "./routePriceUnit";
 export * from "./routeVehicle";
 export * from "./signIns200";
 export * from "./signIns200Data";
